syntax = "proto3";

option csharp_namespace = "Honememo.MatchingApiExample.Protos";

package honememo.matching_api_example;

import "google/protobuf/empty.proto";
import "player.proto";

// ゲームサービス。
service Game {
  // コマンドを送信する。
  rpc SendCommand (SendCommandRequest) returns (google.protobuf.Empty);
  // 部屋の情報を取得する。
  rpc GetRoomStatus (google.protobuf.Empty) returns (GetRoomStatusReply);
}

// コマンド送信の引数。
message SendCommandRequest {
  // コマンド列挙体。
  enum Command {
    ROCK = 0;
    SCISSORS = 1;
    PAPER = 2;
  }
  // 送信コマンド。
  Command command = 1;
}

// 部屋情報取得の戻り値。
message GetRoomStatusReply {
  // 部屋番号。
  uint32 no = 1;
  // 参加プレイヤーのリスト。
  repeated PlayerInfo players = 2;
}
